sohre/templates/destinationRule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: vm1-soh-re-destinationrule
spec:
  host: "vm1.soh.re"
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: vm2-soh-re-destinationrule
spec:
  host: "vm2.soh.re"
  trafficPolicy:
    tls:
      mode: DISABLE
