sohre/templates/serviceEntry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: vm1-soh-re-serviceentry
spec:
  hosts:
  - vm1.soh.re
  ports:
  - number: 8085
    name: http
    protocol: HTTP
  location: MESH_EXTERNAL
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: vm2-soh-re-serviceentry
spec:
  hosts:
  - vm2.soh.re
  ports:
  - number: 8085
    name: http
    protocol: HTTP
  location: MESH_EXTERNAL
  resolution: DNS
